--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -10,7 +10,7 @@
 
 body {
   background: #010103;
-  font-family: 'General Sans', sans-serif;
+  font-family: 'poppins','General Sans', sans-serif;
 }
 
 @layer utilities {
