--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -65,12 +65,19 @@ body {
     @apply w-full h-full border border-black-300 bg-black-200 rounded-lg sm:p-7 p-4 flex flex-col gap-5;
   }
 
+  .sub-grid-container {
+    @apply w-full h-full border border-black-300 bg-black-200 rounded-lg sm:p-3 p-1 flex flex-col gap-3;
+  }
+
   .grid-headtext {
     @apply text-xl font-semibold mb-2 text-white font-generalsans;
   }
 
   .grid-subtext {
     @apply text-[#afb0b6] text-base font-generalsans;
+  }
+  .grid-subtext2 {
+    @apply text-[#afb0b6] text-sm font-generalsans;
   }
 
   .copy-container {
